--- a/cifar/l1-norm-pruning/vgg16_int8_layer.ipynb
+++ b/cifar/l1-norm-pruning/vgg16_int8_layer.ipynb
@@ -26,6 +26,7 @@
     "                   \n",
     "                    'faults_layer': './logs/vgg16/cifar10/int8/faults_layer',\n",
     "                    'faults_layer_masking': './logs/vgg16/cifar10/int8/faults_layer_masking',\n",
+    "                    'faults_layer_p': './logs/vgg16/cifar10/int8/faults_layer_p',\n",
     "                },\n",
     "               \n",
     "            }\n",
@@ -47,8 +48,8 @@
     "dataset_name = 'cifar10'\n",
     "\n",
     "model_types = ['full']\n",
-    "# fault_types = ['faults_layer']\n",
-    "fault_types = ['faults_layer', 'faults_layer_masking']\n"
+    "fault_types = ['faults_layer_p']\n",
+    "# fault_types = ['faults_layer', 'faults_layer_masking']\n"
    ]
   },
   {
